SF Primes/src/objects/Services_Project_Resource__c.object
<CustomObject>
    <description>Human resource list associated to Service Projects.</description>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Strategist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reputation Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resource_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Services_Project_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource_Role__c</fullName>
        <label>Resource Role</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Ops_Projects__c</fullName>
        <label>Service Ops Projects</label>
        <referenceTo>Service_Ops_Projects__c</referenceTo>
        <relationshipLabel>Services Project Resources</relationshipLabel>
        <relationshipName>Services_Project_Resources</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Services Project Resource</label>
    <nameField>
        <displayFormat>SPR-{0000}</displayFormat>
        <label>Project Resource ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services Project Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>